@@ -1,3 +1,8 @@
+Apr 11, 2006
+
+  * FIXED: properly handle the server closing the connection if the connection
+    is specified as Keep-alive in the client (http_get/3 and http_post/4).
+
 Feb 24, 2006
 
   * Added http_error.pl to generate nice looking stack-traces.
